--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_script:
   - docker-compose up -d --build idp
 
 script:
-  - docker-compose exec -ti idp ip addr show 
+  - docker exec -ti idp ip addr show 
 
 after_script:
   - docker-compose down
